Fixed bu_button typo

--- a/components/small_buy_button.html
+++ b/components/small_buy_button.html
@@ -5,7 +5,7 @@
     data-item-name="{{ product_page.title }}"
     data-item-url="{{ product_page.url }}"
     data-item-price="{{ product_page.params.price }}"
-    date-item-categories="{{ product_page.params.category }}"
+    data-item-categories="{{ product_page.params.category }}"
     data-item-image="{{ product_page.params.images.default.thumbnail.fallback }}"
     data-item-description="{{ product_page.params.description }}"
     data-item-id="{{ product_page.params.id}}">
