--- a/components/buy_button.html
+++ b/components/buy_button.html
@@ -6,7 +6,7 @@
     data-item-price="{{ product_page.params.price }}"
     data-item-image="{{ product_page.params.images.default.thumbnail.fallback }}"
     data-item-description="{{ product_page.params.description }}"
-    date-item-categories="{{ product_page.params.category }}"
+    data-item-categories="{{ product_page.params.category }}"
     data-item-id="{{ product_page.params.id}}">
     <span class="button__icon">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
