Stackbit - fixes and react support

--- a/components/html_head.html
+++ b/components/html_head.html
@@ -4,6 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="{{ site.params.snipcart_css }}" />
+<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.18/default/snipcart.css" />
 <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
 <link rel="icon" type="image/png" href="{{ 'images/favicon.png' | relative_url }}">
