--- a/layouts/body.html
+++ b/layouts/body.html
@@ -18,7 +18,5 @@
 
     {% set include_dict = {'page': page,'site': site} %}
     {% include "footer.html" %}
-    <div style="display: none" id="template-params"
-         data-api-key="{{ site.params.snipcart_api_key }}"
-         data-logo-image="{{ site.params.logos.dark.optimized | relative_url }}"></div>
+    <div style="display: none" id="template-params" data-api-key="{{ site.params.snipcart_api_key }}"></div>
 {% endblock %}
