added new color palettes

--- a/layouts/product.html
+++ b/layouts/product.html
@@ -8,8 +8,8 @@
             <div class="product__header">
                 <a href="{{ '/store' | relative_url }}" class="product__back-to-store-link">
                     <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M2.73859 4.30914H19.75V5.59286H2.63961L6.06986 8.98864L5.17449 9.875L0.25 5L5.17449 0.125L6.06986 1.01136L2.73859 4.30914Z" fill="#88DD9B"/>
-                    </svg>                        
+                        <path d="M2.73859 4.30914H19.75V5.59286H2.63961L6.06986 8.98864L5.17449 9.875L0.25 5L5.17449 0.125L6.06986 1.01136L2.73859 4.30914Z" fill="currentColor"/>
+                    </svg>
                     see all products
                 </a>
             </div>
@@ -55,7 +55,7 @@
         <a href="{{ '/store' | relative_url }}" class="content__row content__row--full-width content__row--mb-0 product__back-to-store" style="background-image: url({{site.params.bg_image_product | relative_url}})">
             <svg width="20" height="10" viewBox="0 0 20 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2.73859 4.30914H19.75V5.59286H2.63961L6.06986 8.98864L5.17449 9.875L0.25 5L5.17449 0.125L6.06986 1.01136L2.73859 4.30914Z" fill="white"/>
-            </svg>                        
+            </svg>
             see all products
         </a>
     </main>
