--- a/components/hero_section.html
+++ b/components/hero_section.html
@@ -4,7 +4,7 @@
     {% for action in section.actions %}
         <a href="{{ action.url | relative_url }}" class="link hero__link">
           {{ action.title }}
-          {% if action.arrow %}<svg width="26" height="14" viewBox="0 0 26 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.6819 6.07886H0V7.79048H22.8139L18.2402 12.3182L19.434 13.5L26 7L19.434 0.5L18.2402 1.68182L22.6819 6.07886Z" fill="#88DD9B"/></svg>{%endif%}
+          {% if action.arrow %}<svg width="26" height="14" viewBox="0 0 26 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22.6819 6.07886H0V7.79048H22.8139L18.2402 12.3182L19.434 13.5L26 7L19.434 0.5L18.2402 1.68182L22.6819 6.07886Z" fill="currentColor"/></svg>{%endif%}
         </a>
     {% endfor %}
 </section>
