--- a/sass/imports/_product_grid.scss
+++ b/sass/imports/_product_grid.scss
@@ -37,7 +37,6 @@
 
   &__item-image {
     width: 100%;
-    height: 270px;
     background-size: cover;
     border-radius: $spacing--unit * 3;
     position: relative;
@@ -66,6 +65,9 @@
     bottom: 15px;
     right: 15px;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+    svg {
+      fill: $color_active;
+    }
   }
 
   &--draggable {
